[gd_scene load_steps=10 format=3 uid="uid://dii2c2yiu7w88"]

[ext_resource type="Script" path="res://player/player.gd" id="1_v7hkh"]
[ext_resource type="Texture2D" uid="uid://caapuolmxiw4p" path="res://assets/art/greybox.png" id="2_aeko7"]
[ext_resource type="Script" path="res://flipper.gd" id="2_ninjb"]
[ext_resource type="PackedScene" uid="uid://c4sipluu5i16e" path="res://player/player_animated_sprite.tscn" id="2_tx6sh"]
[ext_resource type="Script" path="res://player/hurt_box.gd" id="4_5axp7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_35pg5"]
radius = 8.0
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_o60hl"]
atlas = ExtResource("2_aeko7")
region = Rect2(0, -0.246381, 23.9253, 24.5262)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yyjfy"]
radius = 7.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8p375"]
radius = 8.0
height = 24.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_v7hkh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_35pg5")

[node name="Flipper" type="Node2D" parent="." node_paths=PackedStringArray("translation_base")]
unique_name_in_owner = true
script = ExtResource("2_ninjb")
translation_base = NodePath("..")

[node name="AnimatedSprite2D" parent="Flipper" instance=ExtResource("2_tx6sh")]

[node name="Sprite2D" type="Sprite2D" parent="Flipper"]
visible = false
position = Vector2(0, -12)
texture = SubResource("AtlasTexture_o60hl")

[node name="Detector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_yyjfy")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 0
script = ExtResource("4_5axp7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_8p375")

[node name="HydrationTickTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="area_entered" from="Detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_detector_area_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="hit" from="HurtBox" to="." method="_on_hurt_box_hit"]
[connection signal="timeout" from="HydrationTickTimer" to="." method="_on_hydration_tick_timer_timeout"]
